--- a/indext.html
+++ b/indext.html
@@ -15,7 +15,7 @@
                     <li><a href="vistas/formulario.html">Ir al formulario</a></li>
                     <li><a href="">Ir a la imagen</a></li>
                     <li><a href="">Ir a la tabla</a></a></li>
-                    <li><a href="">Ir a mi hoja de vida</a></li>
+                    <li><a href="vistas/hojadevida.html">Ir a mi hoja de vida</a></li>
                     <li><a href="https://www.youtube.com/watch?v=D-bYv33e6N0&list=RDD-bYv33e6N0&start_radio=1">Ir al video </a></li>
                 </ul>
             </nav>
