--- a/vistas/formulario.html
+++ b/vistas/formulario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: brown;">
+<body style="background-color: rgb(63, 50, 50);">
     <header>
         <nav>
             <ul>
@@ -30,6 +30,6 @@
         </div>
     </form>
     <!--Insertar una imagen-->
-    <img src="../img/descarga.jpg" alt="trueno" width="200px" height="150px">
+    <img src="../img/descarga.jpeg" alt="trueno" width="200px" height="150px">
 </body>
 </html>
