--- a/vistas/hojadevida.html
+++ b/vistas/hojadevida.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: #005954;">
     <header>
         <nav>
             <ul>
@@ -16,7 +16,7 @@
     <!--Titulo de mi pagina-->
     <h1>MI HOJA DE VIDA</h1>
     <!--Insertar Imagen-->
-    <img src="../img/trueno.jpeg" alt="TR 1" width="125px" height="125  px">
+    <img src="../img/foto.jpg" alt="TR 1" width="125px" height="155px">
     <form action="#" method="get">
         <!--Creo un contenedor-->
         <div>
@@ -35,6 +35,15 @@
         <div>
             <h3>Perfil Profecional</h3>
             <p>Soy una persona responsable, proactiva y con habilidades en comunicación y trabajo en equipo. Me destaco por mi capacidad de aprendizaje rápido y adaptación a nuevos entornos. Tengo interés en el desarrollo profesional continuo y en contribuir al logro de objetivos organizacionales mediante la aplicación de mis conocimientos y habilidades. Poseo experiencia en [mencionar área o sector, por ejemplo: atención al cliente, desarrollo web, gestión administrativa], y busco oportunidades que me permitan crecer profesionalmente mientras aporto valor a la empresa.</p>
+        </div>
+        <div>
+            <h3>Informacion Academica</h3>
+            <p>Bachiller en Ciencias "Unidad Educativa Jacinto Collahuazo</p>
+        </div>
+        <div>
+            <h3>Referencias</h3>
+            <p>Teresa Farinango: 0993246117</p>
+            <p>Fabian Conejo: 0992175402</p>
         </div>
     </form>
 </body>
