--- a/vistas/hojadevida.html
+++ b/vistas/hojadevida.html
@@ -45,6 +45,17 @@
             <p>Teresa Farinango: 0993246117</p>
             <p>Fabian Conejo: 0992175402</p>
         </div>
+        <header>
+            <nav>
+                <h3>CONTACTOS</h3>
+                <a href="https://wa.me/593986345855">
+                    <img src="../img/ic--twotone-whatsapp.svg" alt="" width="50px" height="50px">
+                </a>
+                <a href="https://www.facebook.com/share/14J3uLosR7k/">
+                    <img src="../img/line-md--facebook.svg" alt="" width="50px" height="50px">
+                </a>
+            </nav>
+        </header>
     </form>
 </body>
 </html>
