estilos tablas y formulario

--- a/vistas/tabla.html
+++ b/vistas/tabla.html
@@ -3,106 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../estilos/tabla.css">
     <title>tablas</title>
  <style>
-     body{
-        margin: auto;
-        color: rgb(0,255,68);
-        background-color: rgb(224, 219, 219);
-     }
+/* body{ margin: auto;
+color: rgb(201, 234, 210);
+background-color: rgb(248, 2, 2); Aqui va comentario
+.Contenedor{
 
-     /* Aqui va un comentario dar estilos a una clase */
-     .contenedor{
-        background-color: #fff;
-        color: rgb(90, 67, 33);
-     }
-     /* utilizamos el elemento id*/
-     #titulo{
-        color: rgb(123, 123, 241);
-        text-align: center;
-        font-size: 15px;
-     }
-    </style>
+background: #fff; color: rgb(76, 0, 255);
+}
+Utilizamos el elemento ID
+
+#titulo{
+color: blue;
+text-align: center; font-size: 15px;
+
+}
+*/
+</style>
 </head>
+
 <body>
-    <div class="titulo-contenedor">
-         <h1 id="titulo">tabla de posiciones campeonato ecuatoriano 2025</h1>
-    </div>
+<div class="titulo-contenedor">
+<h1>tabla de posiciones campeonato ecuatoriano 2025</h1>
+</div>
 
-    <!--creo una caja-->
-    <div class="contenedor1">
-        <h2>2</h2>
+<!--Creo una caja -->
+<div class="contenedor1">
+<h2>
+hola mundo
+</h2>
+</div>
 
-    </div>
-   
-    <div class="contenedor">
-        <table class="tabla">
-            <thead>
+<div class="contenedor">
+<table class="tabla">
+<thead>
 <tr>
-    <th colspan="2"> Id Equipo</th>
-    <th> Nombre Equipo</th>
-    <th>partidos jugados</th>
-    <th>partidos ganados</th>
-    <th>partidos perdidos</th>
-    <th>partidos empatados</th>
-    <th>goles a favor</th>
-    <th>goles en contra</th>
-    <th>diferencia de goles</th>
-    <th>puntos </th>
+<th colspan="2"> Id Equipo</th>
+<th> Nombre Equipo</th>
+<th>partidos jugados</th>
+<th>partidos ganados</th>
+<th>partidos perdidos</th>
+<th>partidos empatados</th>
+<th>goles a favor</th>
+<th>goles en contra</th>
+<th>diferencia de goles</th>
+<th>puntos </th>
 </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td rowspan="2">1</td>
-                    <td>Independiente SC</td>
-                    <td>18</td>
-                    <td>18</td>
-                    <td>20</td>
-                    <td rowspan="2">3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>3</td>
-                    <td>-47</td>
-                    <td>13</td>
-                </tr>
-                 <tr>
-                    <td rowspan="2">1</td>
-                    <td>Barcelona SC</td>
-                    <td>18</td>
-                    <td>18</td>
-                    <td>20</td>
-                    <td rowspan="2">3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>3</td>
-                    <td>-47</td>
-                    <td>13</td>
-                </tr>
- <tr>
-                    <td rowspan="2">1</td>
-                    <td>Independiente SC</td>
-                    <td>18</td>
-                    <td>18</td>
-                    <td>20</td>
-                    <td rowspan="2">3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>3</td>
-                    <td>-47</td>
-                    <td>13</td>
-                </tr>
-            </tbody>
-            <tfoot>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2">1</td>
+<td>Independiente SC</td>
+<td>18</td>
+<td>18</td>
+<td>20</td>
+<td rowspan="2">3</td>
+<td>4</td>
+<td>5</td>
+<td>3</td>
+<td>-47</td>
+<td>13</td>
+</tr>
+<tr>
+<td rowspan="2">1</td>
+<td>Independiente SC</td>
+ <td>18</td>
+<td>18</td>
+<td>20</td>
+<td rowspan="2">3</td>
+<td>4</td>
+<td>5</td>
+<td>3</td>
+<td>-47</td>
+<td>13</td>
+</tr>
+<tr>
+<td rowspan="2">1</td>
+<td>Barcelona SC</td>
+<td>18</td>
+<td>18</td>
+<td>20</td>
+<td rowspan="2">3</td>
+<td>4</td>
+<td>5</td>
+<td>3</td>
+<td>-47</td>
+<td>13</td>
+</tr>
 
-            </tfoot>
-        </table>
-    </div>
-    <div class="contenedor2">
-        <a href="../indext.htmlx" style="background-color: rgb(113, 240, 208);">Ir a Index</a>
-    </div>
-    <div>
-        <a href="../indext.html">Ir al SGA</a>
-    </div>
+</tbody>
+<tfoot>
+
+</tfoot>
+</table>
+</div>
+<div class="Contenedor2">
+<a href="../indext.html" class="contenedor">Ir a Index</a>
+</div>
+<div>
+<a href="">Ir al SGA</a>
+</div>
 </body>
 </html>
